Resolve wrapping in Firefox, added truncation in month select (#1245)
* Resolved wrapping in Firefox and added truncation in month select

* Lint fixes

* Modified nowrap to only apply in field

* Update snapshot

--- a/packages/terra-date-input/src/DateInputField.module.scss
+++ b/packages/terra-date-input/src/DateInputField.module.scss
@@ -8,6 +8,10 @@
     margin-bottom: var(--terra-date-input-field-margin-bottom, 1.428em);
     max-width: 72.857rem;
     padding: 0;
+
+    > div {
+      flex-wrap: nowrap;
+    }
   }
 
   .is-inline {
